# Multi-Agent-AI-Purchasing-System-with-Google-ADK-AMD-Instinct-GPUs

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py
agents/burger_agent/: __init__.py  agent.py  config.py  server.py  tools.py
agents/pizza_agent/: __init__.py  agent.py  config.py  server.py  tools.py
agents/purchasing_agent/: __init__.py  agent.py  app.py  connections.py
docs/: A2A_PROTOCOL.md  AMD_GPU_SETUP.md  ARCHITECTURE.md  ui-preview.html
scripts/: start_all.sh  start_ollama.sh  start_vllm.sh
tests/: test_burger_agent.py  test_pizza_agent.py  test_purchasing_agent.py
utils/: __init__.py
